--- a/app/src/main/res/layout/activity_shop_item.xml
+++ b/app/src/main/res/layout/activity_shop_item.xml
@@ -1,77 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.fragment.app.FragmentContainerView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/fcv_shop_item"
     android:background="@drawable/app_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
     tools:context=".presentation.ui.activity.ShopItemActivity">
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutName"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:hintTextColor="@color/black"
-        app:errorIconTint="@android:color/holo_red_dark"
-        android:textColorHint="@color/black"
-        app:errorTextColor="@android:color/holo_red_dark"
-        app:cursorColor="@color/black"
-        app:cursorErrorColor="@android:color/holo_red_dark"
-        app:boxStrokeColor="@color/black"
-        app:boxStrokeErrorColor="@android:color/holo_red_dark">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditTextName"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="19sp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:hint="@string/input_name"
-            android:inputType="textCapWords"/>
-
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/textInputLayoutCount"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        app:hintTextColor="@color/black"
-        app:errorIconTint="@android:color/holo_red_dark"
-        android:textColorHint="@color/black"
-        app:errorTextColor="@android:color/holo_red_dark"
-        app:cursorColor="@color/black"
-        app:cursorErrorColor="@android:color/holo_red_dark"
-        app:boxStrokeColor="@color/black"
-        app:boxStrokeErrorColor="@android:color/holo_red_dark">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/textInputEditTextCount"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textSize="19sp"
-            android:textColor="@color/black"
-            android:textColorHint="@color/black"
-            android:hint="@string/input_count"
-            android:inputType="numberDecimal"/>
-    </com.google.android.material.textfield.TextInputLayout>
-
-    <Button
-        android:id="@+id/buttonSave"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_margin="8dp"
-        android:paddingStart="32dp"
-        android:paddingEnd="32dp"
-        android:textSize="26sp"
-        android:backgroundTint="@color/color_for_button"
-        app:cornerRadius="10dp"
-        android:textColor="@color/white"
-        android:text="@string/save" />
-</LinearLayout>
+</androidx.fragment.app.FragmentContainerView>
