--- a/app/src/main/res/layout/fragment_shop_item.xml
+++ b/app/src/main/res/layout/fragment_shop_item.xml
@@ -74,4 +74,13 @@
         app:cornerRadius="10dp"
         android:textColor="@color/white"
         android:text="@string/save" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:gravity="center"
+        android:layout_margin="4dp"
+        android:text="@string/hint_long_click" />
 </LinearLayout>
